# quac_experiments

./: .cruft.json  .gitignore  README.md  mypy.ini  pixi.toml  pyproject.toml  setup.py
bbbc021/: .gitignore  00_jit_classifier.py  00_train_classifier.py  01_train_stargan.py  02_generate_images.py  03_attribution.py  04_evaluation.py  05_results.py  06_figure.py  README.md  config.yaml  pixi.toml  run_evaluation.sh  run_generation.sh
fictus/: 00_train_classifier.py  01_eval_classifier.py  02_train_stargan.py  03_generate.py  04_attribute.py  04_generate.py  05_evaluate.py  05_plot_figure.py  05_run_evaluation.py  06_style_space.py  README.md  analysis.py  config.py  evaluate_attribution_worker.py  evaluate_attributions.py  evaluate_attributions_notebook.py  generate_attributions.py  plot_figure.py  resnet.py  train_stargan.py  utils.py
flyid/: .gitignore  01_jit_classifier.py  02_train_gan.py  02_train_stargan.py  03_generate_images.py  04_get_attributions.py  05_evaluate.py  06_create_blinded_annotation.py  06_results.py  07_get_individual_quac_curves.py  README.md  config.yaml  config.yml  pixi.toml  run_evaluation.sh  run_evaluation_workers.py  run_generation.sh
kenyon_cells/: README.md  check_for_ood.py  generate_counterfactuals.py  generate_counterfactuals_worker.py  get_synapse_locations.py  plot_fafb.py  plot_specific_samples.py  prioritize_neurons.py  requirements.txt  run_attribution.py  run_attribution_worker.py  run_classification.py  run_classification_worker.py  run_evaluation.py  run_evaluation_worker.py  test_gpu_size.py  utils.py  viz_utils.py  (+2 more)
(+120 files in other folders)
