[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "quac.experiments"
description = "Experiments for QuAC"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
]
keywords = []
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "adjavond@hhmi.org", name = "Diane Adjavon" },
]
dynamic = ["version"]
dependencies = [
  "matplotlib",
  "GitPython",
  "pydantic"
]

[project.optional-dependencies]
dev = [
  'pytest',
  'black',
  'mypy',
  'pdoc',
  'pre-commit'
]

[project.urls]
homepage = "https://github.com/funkelab/quac_experiments"
repository = "https://github.com/funkelab/quac_experiments"
